# QuantumSpectra-2024

./: .gitignore  .readthedocs.yaml  mlj.toml  pyproject.toml  qs_2024.py  two_state.toml
docs/source/: conf.py  index.rst
docs/source/cli/: config.rst
docs/source/computation/: mlj_computation.rst  stark_computation.rst  two_state_computation.rst
docs/source/models/: mlj.rst  stark.rst  two_state.rst
docs/source/package/: absorption_spectrum.rst  modules.rst  quantumspectra_2024.absorption.mlj.rst  quantumspectra_2024.absorption.rst  quantumspectra_2024.absorption.stark.rst  quantumspectra_2024.absorption.two_state.rst  quantumspectra_2024.modules.absorption.rst  quantumspectra_2024.modules.hamiltonian.rst  quantumspectra_2024.modules.rst  quantumspectra_2024.rst  quantumspectra_2024.scripts.rst
docs/source/startup/: installation.rst  quickstart.rst  usage.rst
outputs/hpc/: python_runner.py  run_everything.py  saving_loading.py  view_pickled.ipynb
outputs/hpc/experiment/: sample_experiment.py
outputs/hpc/niche/: experiment_intensity_comparison.py  stark_intensity_comparison.py
outputs/plots 4-30-2024/: memory_profile.json  plot_utils.py  qm_mlj_abs.py  stark_derivative.py  stark_sliders.ipynb
quantumspectra_2024/common/: Config.py
quantumspectra_2024/modules/: AbsorptionModel.py  AbsorptionSpectrum.py  Config.py
quantumspectra_2024/scripts/: qs_2024_sample_configs.py
sample_configs/: stark.toml
tests/: get_data.py  ok_to_delete.ipynb  ok_to_delete_hamiltonian_test.py  test_two_state.py
tests/validation_data/: fortran.py  two_state_data.pickle
(+277 files in other folders)
