[tool.poetry]
name = "quantumspectra-2024"
version = "0.1.0"
description = ""
authors = ["benkoppe <bentastic1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
jax = "^0.4.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
