[tool.poetry]
name = "quantumspectra-2024"
version = "0.1.0"
description = ""
authors = ["benkoppe <bentastic1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
jax = "^0.4.25"
jax-dataclasses = "^1.6.0"
jaxtyping = "^0.2.28"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
